Bug fixede: Removed horizontal scrollbar from inbox.

--- a/CKP.MobileApp/src/assests/styles/main.css
+++ b/CKP.MobileApp/src/assests/styles/main.css
@@ -1,5 +1,8 @@
 /*swipe css start*/
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 #edit-listview .delete {
     display: none;
     position: absolute;
